<resources>
    <string name="app_name">EU Estudiante</string>
    <string name="id_sesion_de_clase">ID sesión de clase</string>
    <string name="nro_identificacion">Número identificación</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="descripcion">DESCRIPCIÓN</string>
    <string name="nro_actividad">NÚMERO\nACTIVIDAD</string>
    <string name="descargar">Descargar</string>
    <string name="archivos">ARCHIVOS</string>
    <string name="descripcionactividad">Descripción de la actividad</string>
    <string name="descripcionsesion">Descripción de la sesion</string>
    <string name="nro">#</string>
    <string name="nro_sesion">NÚMERO\nSESIÓN</string>
    <string name="actividad">ACTIVIDADES</string>
    <string name="logo">Logo EduApps</string>
    <string name="actividades_de_la_sesi_n_de_clase">ACTIVIDADES DE LA SESIÓN DE CLASE</string>
    <string name="tiempo">Tiempo:</string>
    <string name="recurso">Recursos:</string>
    <string name="separador">-</string>
    <string name="cancelar">Cancelar</string>
<<<<<<< HEAD
    <string name="mariadb">https://192.168.1.53/ApiRest/</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="estado_actividad">Estado actividad</string>
    <string name="detalles">Detalles</string>
    <string name="cambiar">Cambiar</string>
=======
    <string name="consulta">https://192.168.0.101/api/get/</string>
>>>>>>> f61d18877efb9fc2cbfa1ab33c1305109b1437c0
    <string-array name="tipoident">
        <item>Tipo de identificación</item>
        <item>TI</item>
        <item>CC</item>
    </string-array>
    <string-array name="estado">
        <item>Cambiar estado</item>
        <item>Iniciada</item>
        <item>Finalizada</item>
        <item>Abandonada</item>
    </string-array>
</resources>
