<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/colorSecondary"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_actividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableEnd="@android:drawable/radiobutton_off_background"
                android:fontFamily="sans-serif-medium"
                android:text="@string/actividad"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/tiempo"
                    android:textAlignment="viewStart"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

                <TextView
                    android:id="@+id/text_tiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/tiempo"
                    android:textAlignment="viewStart"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/descripcionactividad"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="98dp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="224dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnExpand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/detalles"
                    app:srcCompat="@drawable/more" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btnDescargar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/descargar"
                    app:srcCompat="@android:drawable/stat_sys_download" />

                <ImageButton
                    android:id="@+id/btnEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/estado_actividad"
                    app:srcCompat="@android:drawable/ic_menu_edit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDetalles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:id="@+id/vwSeparator2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="5dp"
                    android:background="#FFFFFF" />

                <TextView
                    android:id="@+id/recurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/recurso"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

                <TextView
                    android:id="@+id/text_recurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/recurso"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>