<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/btn_style"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_actividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/actividad"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="22dp"
            tools:layout_conversion_absoluteWidth="98dp"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="224dp" />

        <View
            android:id="@+id/vwSeparator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF" />

        <ProgressBar
            android:id="@+id/barProcess"
            style="@android:style/Widget.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/text_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/descripcionactividad"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="22dp"
            tools:layout_conversion_absoluteWidth="98dp"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="224dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style_secundary"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>